# swarm-uav-simulation-env

./: Autonomous_Flight.cpp  CMakeLists.txt  Forest_Generator  Forest_Generator.cpp  README.md  Swarm_Manager_Node.cpp  Swarm_UAV.cpp  launch.sh
archive/: Autonomous_Flight.cpp  Swarm_UAV.cpp
gui_control/: gui_panel  gui_panel.cpp
worlds/: Forest_world.sdf  fire_ground_truth.txt
